infra/k8s-config/client-deployment.yaml
# Kubernetes deployment for the client of the apollo prototype.
# Author: Andrew Jarombek
# Date: 8/3/2020

apiVersion: apps/v1
kind: Deployment
metadata:
  name: apollo-prototype-client-deployment
  namespace: sandbox
  labels:
    version: v1.0.0
    environment: production
    application: apollo-client-server-prototype
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      application: apollo-client-server-prototype
      environment: production
  template:
    metadata:
      labels:
        version: v1.0.0
        environment: production
        application: apollo-client-server-prototype
    spec:
      containers:
        - name: apollo-prototype-client
          image: ajarombek/apollo-prototype-client:latest
          readinessProbe:
            periodSeconds: 5
            initialDelaySeconds: 20
            httpGet:
              path: /
              port: 80
          ports:
            - containerPort: 80
              protocol: TCP
