infra/k8s-config/client-service.yaml
# Kubernetes NodePort service for the client of the apollo prototype.
# Author: Andrew Jarombek
# Date: 8/3/2020

apiVersion: v1
kind: Service
metadata:
  name: apollo-prototype-client-service
  namespace: sandbox
  labels:
    version: v1.0.0
    environment: production
    application: apollo-client-server-prototype
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    application: apollo-client-server-prototype
